Bug fixes, copyright texts modified